--- a/IK-Packing_list_V1.0.html
+++ b/IK-Packing_list_V1.0.html
@@ -31,16 +31,36 @@
             <div class="content">
 
                 <!-- Button load file -->
-                <div class="element">
+                <div id="button-load-shipments" class="element">
                         <label id="shipment-data-label" class="custom-button" for="shipment-data">Información de Shipments</label>
                         <input type="file" name="shipment-data" id="shipment-data" class="no-visible">
                 </div>
 
-                <div class="element">
+                <div id="shipments-container" class="element no-visible">
                     <!-- <textarea name="" id="text" cols="" rows="">Textarea</textarea> -->
                     <table>
-                        <tbody id="data"></tbody>
+                        <tr class="">
+                            <th>Shipment ID</th>
+                            <th>Estimated Arrival Date</th>
+                            <th>Código</th>
+                            <th>Selección</th>
+                        </tr>
+                        <tbody id="shipments"></tbody>
                     </table>
+                </div>
+
+                <div id="shipments-commands" class="element no-visible">
+                    <div class="shipments-commands">
+                        <p>Shipments: <span id="shipments-total"></span></p>
+                        <fieldset>
+                            <legend>Seleccionar Código</legend>
+                            <button class="custom-button _1000">1000</button>
+                            <button class="custom-button _2000">2000</button>
+                            <button class="custom-button _3000">3000</button>
+                        </fieldset>
+                        <button id="shipments-remove" class="custom-button">Remover Shipment</button>
+                        <button id="shipments-clear" class="custom-button">Limpiar Selección</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -56,8 +76,10 @@
     </div>
 
 
+    <script src="https://kit.fontawesome.com/b0d3e7dfc1.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <script src="./excelReportsFunctions.js"></script>
+    <script src="./viewFunctions.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
