select shipments codes

--- a/IK-Packing_list_V1.0.html
+++ b/IK-Packing_list_V1.0.html
@@ -54,9 +54,9 @@
                         <p>Shipments: <span id="shipments-total"></span></p>
                         <fieldset>
                             <legend>Seleccionar Código</legend>
-                            <button class="custom-button _1000">1000</button>
-                            <button class="custom-button _2000">2000</button>
-                            <button class="custom-button _3000">3000</button>
+                            <button id="FIRST" class="custom-button _1000">1000</button>
+                            <button id="SECOND" class="custom-button _2000">2000</button>
+                            <button id="THIRD" class="custom-button _3000">3000</button>
                         </fieldset>
                         <button id="shipments-remove" class="custom-button">Remover Shipment</button>
                         <button id="shipments-clear" class="custom-button">Limpiar Selección</button>
