remove constant height from the content data view

--- a/IK-Packing_list_V1.0.html
+++ b/IK-Packing_list_V1.0.html
@@ -9,10 +9,7 @@
 </head>
 <body class="body">
 
-    <div class="box">
-
-    
-
+    <div id="box" class="box">
 
         <!-- Panel Wait Async -->
         <div class="loading-frame no-visible" id="loading-frame">
