--- a/IK-Packing_list_V1.0.html
+++ b/IK-Packing_list_V1.0.html
@@ -143,7 +143,7 @@
                         <!-- Report Data -->
                         <div class="">
                             <table>
-                                <thead>
+                                <thead id="report-table-headers">
                                     <tr>
                                         <th>Referencia</th>
                                         <th>Código</th>
