adjust version info

--- a/IK-Packing_list_V1.0.html
+++ b/IK-Packing_list_V1.0.html
@@ -22,6 +22,7 @@
         <div class="container-title">
             <div class="title">
                 <h1 id="title">Generador de Packing List - Galex </h1>
+                <h6 id="version-footer" class="version"> (https://github.com/perseo1326)</h6>
             </div>
         </div>
 
@@ -151,30 +152,14 @@
                                     </tr>
                                 </thead>
                                 <tbody id="report-data">
-
-                                    <tr><td>12345678</td><td>2023</td></tr>
-
                                 </tbody>
                             </table>
                         </div>
 
                     </div>
                 </div>
-
             </div>
-
         </div>
-
-
-
-
-
-
-        <div class="footer-version no-visible">
-            <!-- Version de la aplicacion -->
-            <p id="version-footer" class="versions"> (https://github.com/perseo1326)</p>
-        </div>
-
     </div>
 
 
