copy shipments function done

--- a/IK-Packing_list_V1.0.html
+++ b/IK-Packing_list_V1.0.html
@@ -12,6 +12,9 @@
 
     <div id="box" class="box">
 
+        <!-- Node that will contain the text that will be copied -->
+        <div id="copy-node" class="no-visible_"></div>
+
         <!-- Panel Wait Async -->
         <div class="loading-frame no-visible" id="loading-frame">
             <div class="loading" >
@@ -40,6 +43,7 @@
                 <div id="shipments-container" class="element no-visible">
                     <table>
                         <tr class="">
+                            <th>Copiar</th>
                             <th>Shipment ID</th>
                             <th>Estimated Arrival Date</th>
                             <th>Código</th>
