copy packing list and copy report are implemented

--- a/IK-Packing_list_V1.0.html
+++ b/IK-Packing_list_V1.0.html
@@ -36,8 +36,6 @@
                 <div id="button-load-shipments" class="element">
                         <label id="shipments-data-label" class="custom-button" for="shipments-data">Información de Shipments</label>
                         <input type="file" name="shipments-data" id="shipments-data" class="no-visible">
-
-                        <button id="copy-paste" class="custom-button">Copiar / Pegar portapaleles</button>
                 </div>
 
                 <div id="shipments-container" class="element no-visible">
@@ -148,7 +146,7 @@
                     <div id="report-panel" class="report-panel no-visible">
                         <!-- Report Data -->
                         <div class="">
-                            <table>
+                            <table id="report-table-data">
                                 <thead id="report-table-headers">
                                     <tr>
                                         <th>Referencia</th>
