--- a/IK-Packing_list_V1.html
+++ b/IK-Packing_list_V1.html
@@ -22,7 +22,9 @@
         <div class="container-title">
             <div class="title">
                 <h1 id="title">Generador de Packing List - Galex </h1>
-                <h6 id="version-footer" class="version"> (https://github.com/perseo1326)</h6>
+                <a class="version" href="https://github.com/perseo1326" target="_blank">
+                    <h6 id="version-footer" class="version"></h6>
+                </a>
             </div>
         </div>
 
@@ -40,7 +42,9 @@
                         <tr class="">
                             <th>No.</th>
                             <th>Copiar</th>
-                            <th>Shipment ID</th>
+                            <th>Shipment ID <span id="add-manual-shipping">
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0,0,256,256" width="24px" height="24px"><g fill="#ffdb01" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M12,2c-5.511,0 -10,4.489 -10,10c0,5.511 4.489,10 10,10c5.511,0 10,-4.489 10,-10c0,-5.511 -4.489,-10 -10,-10zM12,4c4.43012,0 8,3.56988 8,8c0,4.43012 -3.56988,8 -8,8c-4.43012,0 -8,-3.56988 -8,-8c0,-4.43012 3.56988,-8 8,-8zM11,7v4h-4v2h4v4h2v-4h4v-2h-4v-4z"></path></g></g></svg>
+                            </span></th>
                             <th>Estimated Arrival Date</th>
                             <th>Código</th>
                             <th>Selección</th>
