update add manual shipping -> work in progress

--- a/IK-Packing_list_V1.html
+++ b/IK-Packing_list_V1.html
@@ -25,11 +25,11 @@
                 <h3 class="add-shipping-title">Agregar shippment manualmente</h3>
                 <div class="container-column add-shipping-content">
                     <label for="shipment-id">Shipment ID</label>
-                    <input type="text" name="shipment-id" id="shipment-id">
+                    <input type="text" name="shipment-id" id="shipment-id" autofocus required>
                     <label for="">Fecha - Hora</label>
                     <div class="container-row">
-                        <input type="date" name="shipment-date" id="shipment-date">
-                        <input type="time" name="shipment-time" id="shipment-time">
+                        <input type="date" name="shipment-date" id="shipment-date" required>
+                        <input type="time" name="shipment-time" id="shipment-time" required>
                     </div>
                     <div class="container-row add-shipping-buttons">
                         <button id="add-manual-ship-ok-b" class="custom-button">Agregar</button>
