added link button for FMS OR130A report

--- a/IK-Packing_list_V1.html
+++ b/IK-Packing_list_V1.html
@@ -90,7 +90,10 @@
                         <button id="shipments-clear" class="custom-button">Limpiar Selección</button>
                     </div>
                     <div class="report-load">
-                        <label id="" class="custom-button" for="report-load"><strong>Continuar</strong><br> Cargar Reporte 'OR130'</label>
+                        <a id="FMS_OR130A_link" href="#" target="_blank">
+                            <button id="" class="custom-button">Abrir FMS Auto Exporter...</button>
+                        </a>
+                        <label id="load-OR130A-report" class="custom-button no-visible" for="report-load"><strong>Continuar</strong><br> Cargar Reporte 'OR130'</label>
                         <input type="file" name="report-load" id="report-load" class="no-visible">
                     </div>
                 </div>
