--- a/IK-Packing_list_V1.html
+++ b/IK-Packing_list_V1.html
@@ -93,10 +93,10 @@
                         <a id="receiving-link" href="#" target="_blank">
                             <button class="custom-button">Gestor de Entregas...</button>
                         </a>
-                        <a class="no-visible" id="FMS_OR130A_link" href="#" target="_blank">
+                        <a class="" id="FMS_OR130A_link" href="#" target="_blank">
                             <button id="" class="custom-button">Abrir FMS Auto Exporter...</button>
                         </a>
-                        <label id="load-OR130A-report" class="custom-button no-visible" for="report-load"><strong>Continuar</strong><br> Cargar Reporte 'OR130'</label>
+                        <label id="load-OR130A-report" class="custom-button" for="report-load"><strong>Continuar</strong><br> Cargar Reporte 'OR130'</label>
                         <input type="file" name="report-load" id="report-load" class="no-visible">
                     </div>
                 </div>
