added links for external resources, order goods and inflow suggested load

--- a/IK-Packing_list_V1.html
+++ b/IK-Packing_list_V1.html
@@ -116,7 +116,7 @@
                         </div>
                         <div class="">
                             <a href="#" class="macro-link" target="_blank">
-                                <button id="esbo-order" class="custom-button enlace-macro">Herramienta Pedidos ESBO</button>
+                                <button id="esbo-order" class="custom-button">Herramienta Pedidos ESBO</button>
                             </a>
                         </div>
                     </div>
