GET local resources

--- a/IK-Packing_list_V1.html
+++ b/IK-Packing_list_V1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="autor" content="https://github.com/perseo1326" />
-    <!-- <link rel="stylesheet" href="styles.css"> -->
-    <link rel="stylesheet" href="https://iweof.sharepoint.com/:u:/r/teams/o365g_all_retes406/Shared%20Documents/MOHA/Apps/IK-Packing_List-main/styles.css?csf=1&web=1&e=5cLdh5">
+    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="https://iweof.sharepoint.com/:u:/r/teams/o365g_all_retes406/Shared%20Documents/MOHA/Apps/IK-Packing_List-main/styles.css?csf=1&web=1&e=5cLdh5"> -->
     <title>Galex</title>
 </head>
 <body class="body">
@@ -207,13 +207,13 @@
 
     <script src="https://kit.fontawesome.com/b0d3e7dfc1.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-    <!-- <script src="./excelReportsFunctions.js"></script> -->
-    <script src="https://iweof.sharepoint.com/:u:/r/teams/o365g_all_retes406/Shared%20Documents/MOHA/Apps/IK-Packing_List-main/excelReportsFunctions.js?csf=1&web=1&e=zEvmBB"></script>
-    <!-- <script src="./viewFunctions.js"></script> -->
-    <script src="https://iweof.sharepoint.com/:u:/r/teams/o365g_all_retes406/Shared%20Documents/MOHA/Apps/IK-Packing_List-main/viewFunctions.js?csf=1&web=1&e=zIMH9b"></script>
-    <!-- <script src="./shipments.js"></script> -->
-    <script src="https://iweof.sharepoint.com/:u:/r/teams/o365g_all_retes406/Shared%20Documents/MOHA/Apps/IK-Packing_List-main/shipments.js?csf=1&web=1&e=2fgKxi"></script>
-    <!-- <script src="./report.js"></script> -->
-    <script src="https://iweof.sharepoint.com/:u:/r/teams/o365g_all_retes406/Shared%20Documents/MOHA/Apps/IK-Packing_List-main/report.js?csf=1&web=1&e=8oSIMH"></script>
+    <script src="./excelReportsFunctions.js"></script>
+    <!-- <script src="https://iweof.sharepoint.com/:u:/r/teams/o365g_all_retes406/Shared%20Documents/MOHA/Apps/IK-Packing_List-main/excelReportsFunctions.js?csf=1&web=1&e=zEvmBB"></script> -->
+    <script src="./viewFunctions.js"></script>
+    <!-- <script src="https://iweof.sharepoint.com/:u:/r/teams/o365g_all_retes406/Shared%20Documents/MOHA/Apps/IK-Packing_List-main/viewFunctions.js?csf=1&web=1&e=zIMH9b"></script> -->
+    <script src="./shipments.js"></script>
+    <!-- <script src="https://iweof.sharepoint.com/:u:/r/teams/o365g_all_retes406/Shared%20Documents/MOHA/Apps/IK-Packing_List-main/shipments.js?csf=1&web=1&e=2fgKxi"></script> -->
+    <script src="./report.js"></script>
+    <!-- <script src="https://iweof.sharepoint.com/:u:/r/teams/o365g_all_retes406/Shared%20Documents/MOHA/Apps/IK-Packing_List-main/report.js?csf=1&web=1&e=8oSIMH"></script> -->
 </body>
 </html>
