--- a/IK-Packing_list_V1.html
+++ b/IK-Packing_list_V1.html
@@ -48,7 +48,7 @@
         <div class="container-title">
             <div class="title">
                 <h1 id="title">Generador de Packing List - Galex </h1>
-                <h5 id="version-footer" class="version "><a class="contact" href="mailto:johnwilli.skolik@ingka.ikea.com">johnwilli.skolik@ingka.ikea.com</a></h5>
+                <h5 id="version-footer" class="version "><a class="contact" href="mailto:jskolik@gmail.com">jskolik@gmail.com</a></h5>
             </div>
         </div>
 
